Fix, 3d primitives, core debug draw
Fixed render bugs. Primitives are 3D now. Core DebugDraw implemented

--- a/Engine/Projects/new_kakish/AssetManager.am
+++ b/Engine/Projects/new_kakish/AssetManager.am
@@ -27,17 +27,17 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "path": "/data/shaders/primitives/line2D/shader.glsl"
+        "path": "/data/shaders/primitives/line/shader.glsl"
       },
-      "path": "/data/shaders/primitives/line2D/shader.glsl",
+      "path": "/data/shaders/primitives/line/shader.glsl",
       "assetObjectClassName": "Core2D.DataClasses.ShaderData"
     },
     {
       "assetObject": {
         "lastModified": -1,
-        "path": "/data/shaders/primitives/line2D/instancing/shader.glsl"
+        "path": "/data/shaders/primitives/line/instancing/shader.glsl"
       },
-      "path": "/data/shaders/primitives/line2D/instancing/shader.glsl",
+      "path": "/data/shaders/primitives/line/instancing/shader.glsl",
       "assetObjectClassName": "Core2D.DataClasses.ShaderData"
     },
     {
@@ -88,6 +88,22 @@
       },
       "path": "/data/audio/dj-arbuz.wav",
       "assetObjectClassName": "Core2D.DataClasses.AudioData"
+    },
+    {
+      "assetObject": {
+        "lastModified": -1,
+        "path": "/data/shaders/primitives/line2D/shader.glsl"
+      },
+      "path": "/data/shaders/primitives/line2D/shader.glsl",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
+    },
+    {
+      "assetObject": {
+        "lastModified": -1,
+        "path": "/data/shaders/primitives/line2D/instancing/shader.glsl"
+      },
+      "path": "/data/shaders/primitives/line2D/instancing/shader.glsl",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
     },
     {
       "assetObject": {
