--- a/imgui.ini
+++ b/imgui.ini
@@ -194,8 +194,8 @@ Collapsed=0
 DockId=0x0000001B,2
 
 [Window][Shaders Editor]
-Pos=5,21
-Size=7,1
+Pos=1880,52
+Size=299,1029
 Collapsed=0
 DockId=0x0000001C,0
 
@@ -217,8 +217,8 @@ Collapsed=0
 DockId=0x0000001B,2
 
 [Window][PPLayer "sceneCopyLayer"]
-Pos=138,52
-Size=2067,1112
+Pos=268,52
+Size=1911,1029
 Collapsed=0
 DockId=0x0000001B,2
 
@@ -254,20 +254,20 @@ Collapsed=0
 DockId=0x353BF52F,0
 
 [Window][Uniforms]
-Pos=1832,88
-Size=299,1030
+Pos=1880,88
+Size=299,993
 Collapsed=0
-DockId=0x3BDE5AF8,0
+DockId=0x2F8EF246,0
 
 [Window][Defines]
-Pos=1832,88
-Size=299,1030
+Pos=1880,88
+Size=299,993
 Collapsed=0
-DockId=0x3BDE5AF8,1
+DockId=0x2F8EF246,1
 
 [Window][default_shader.glsl]
-Pos=1832,70
-Size=299,1129
+Pos=1880,70
+Size=299,1011
 Collapsed=0
 DockId=0x353BF52F,0
 
@@ -292,9 +292,14 @@ Size=4,4
 Collapsed=0
 DockId=0x353BF52F,0
 
+[Window][New GLSL.MeshComplexShader file]
+Pos=1017,513
+Size=525,350
+Collapsed=0
+
 [Docking][Data]
 DockSpace               ID=0x085D2BD9 Pos=138,70 Size=245,1094 CentralNode=1 Selected=0xEDC13103
-DockSpace               ID=0x1F304E58 Pos=930,494 Size=700,407 Split=Y
+DockSpace               ID=0x1F304E58 Window=0xFE8C7A15 Pos=930,494 Size=700,407 Split=Y
   DockNode              ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
     DockNode            ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
     DockNode            ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
@@ -303,8 +308,8 @@ DockSpace               ID=0x1F304E58 Pos=930,494 Size=700,407 Split=Y
         DockNode        ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
       DockNode          ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode              ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace               ID=0x353BF52F Pos=5,39 Size=4,4 CentralNode=1 Selected=0xC1DC4B6C
-DockSpace               ID=0x3BDE5AF8 Pos=1832,88 Size=299,1030 CentralNode=1 Selected=0xB68273D7
+DockSpace               ID=0x2F8EF246 Pos=1880,88 Size=299,993 CentralNode=1 Selected=0xB78BA70B
+DockSpace               ID=0x353BF52F Pos=1880,70 Size=299,1011 CentralNode=1 Selected=0x43824DDF
 DockSpace               ID=0x9F6C4150 Window=0xF8AAECE4 Pos=2190,176 Size=379,1029 CentralNode=1 Selected=0xA115F62D
 DockSpace               ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode              ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
@@ -321,7 +326,7 @@ DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=2560,1359 
           DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1911,970 Split=X Selected=0xEC9B321F
             DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=245,455 Selected=0x289D2C3F
             DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1312,455 Split=X Selected=0xEC9B321F
-              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=1692,455 CentralNode=1 Selected=0x772F22E0
+              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=1692,455 CentralNode=1 Selected=0xEC9B321F
               DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=299,455 Selected=0xF3BD85C8
           DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=379,970 Selected=0xF02CD328
       DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,255 Split=X Selected=0x6D97690D
