--- a/Engine/Projects/new_kakish/AssetManager.am
+++ b/Engine/Projects/new_kakish/AssetManager.am
@@ -3,7 +3,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/mesh/default_shader.glsl",
+        "canonicalPath": "/data/shaders/mesh/default_shader.glsl",
         "relativePath": "/data/shaders/mesh/default_shader.glsl"
       },
       "path": "/data/shaders/mesh/default_shader.glsl",
@@ -12,7 +12,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/mesh/instancing_shader.glsl",
+        "canonicalPath": "/data/shaders/mesh/instancing_shader.glsl",
         "relativePath": "/data/shaders/mesh/instancing_shader.glsl"
       },
       "path": "/data/shaders/mesh/instancing_shader.glsl",
@@ -21,7 +21,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/mesh/picking_shader.glsl",
+        "canonicalPath": "/data/shaders/mesh/picking_shader.glsl",
         "relativePath": "/data/shaders/mesh/picking_shader.glsl"
       },
       "path": "/data/shaders/mesh/picking_shader.glsl",
@@ -30,7 +30,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/primitives/line/shader.glsl",
+        "canonicalPath": "/data/shaders/primitives/line/shader.glsl",
         "relativePath": "/data/shaders/primitives/line/shader.glsl"
       },
       "path": "/data/shaders/primitives/line/shader.glsl",
@@ -39,7 +39,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/primitives/line/instancing/shader.glsl",
+        "canonicalPath": "/data/shaders/primitives/line/instancing/shader.glsl",
         "relativePath": "/data/shaders/primitives/line/instancing/shader.glsl"
       },
       "path": "/data/shaders/primitives/line/instancing/shader.glsl",
@@ -48,16 +48,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/postprocessing/postprocessing_default_shader.glsl",
-        "relativePath": "/data/shaders/postprocessing/postprocessing_default_shader.glsl"
-      },
-      "path": "/data/shaders/postprocessing/postprocessing_default_shader.glsl",
-      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
-    },
-    {
-      "assetObject": {
-        "lastModified": -1,
-        "absolutePath": "/data/shaders/postprocessing/postprocessing_test0_shader.glsl",
+        "canonicalPath": "/data/shaders/postprocessing/postprocessing_test0_shader.glsl",
         "relativePath": "/data/shaders/postprocessing/postprocessing_test0_shader.glsl"
       },
       "path": "/data/shaders/postprocessing/postprocessing_test0_shader.glsl",
@@ -66,7 +57,7 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/postprocessing/postprocessing_test1_shader.glsl",
+        "canonicalPath": "/data/shaders/postprocessing/postprocessing_test1_shader.glsl",
         "relativePath": "/data/shaders/postprocessing/postprocessing_test1_shader.glsl"
       },
       "path": "/data/shaders/postprocessing/postprocessing_test1_shader.glsl",
@@ -75,7 +66,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "/data/textures/white_texture.png",
+        "canonicalPath": "/data/textures/white_texture.png",
         "relativePath": "/data/textures/white_texture.png"
       },
       "path": "/data/textures/white_texture.png",
@@ -84,7 +75,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "/data/textures/ui/progressBar/progress_bar.png",
+        "canonicalPath": "/data/textures/ui/progressBar/progress_bar.png",
         "relativePath": "/data/textures/ui/progressBar/progress_bar.png"
       },
       "path": "/data/textures/ui/progressBar/progress_bar.png",
@@ -92,7 +83,7 @@
     },
     {
       "assetObject": {
-        "absolutePath": "/data/models/plane.obj",
+        "canonicalPath": "/data/models/plane.obj",
         "relativePath": "/data/models/plane.obj"
       },
       "path": "/data/models/plane.obj",
@@ -100,8 +91,16 @@
     },
     {
       "assetObject": {
+        "canonicalPath": "/data/models/plane_normalized.obj",
+        "relativePath": "/data/models/plane_normalized.obj"
+      },
+      "path": "/data/models/plane_normalized.obj",
+      "assetObjectClassName": "Core2D.DataClasses.ModelData"
+    },
+    {
+      "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/common/only_color_shader.glsl",
+        "canonicalPath": "/data/shaders/common/only_color_shader.glsl",
         "relativePath": "/data/shaders/common/only_color_shader.glsl"
       },
       "path": "/data/shaders/common/only_color_shader.glsl",
@@ -109,7 +108,7 @@
     },
     {
       "assetObject": {
-        "absolutePath": "/data/audio/dj-arbuz.wav",
+        "canonicalPath": "/data/audio/dj-arbuz.wav",
         "relativePath": "/data/audio/dj-arbuz.wav"
       },
       "path": "/data/audio/dj-arbuz.wav",
@@ -118,7 +117,8 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "/data/textures/x.png"
+        "canonicalPath": "/data/textures/x.png",
+        "relativePath": "/data/textures/x.png"
       },
       "path": "/data/textures/x.png",
       "assetObjectClassName": "Core2D.DataClasses.Texture2DData"
@@ -126,7 +126,8 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/primitives/line2D/shader.glsl"
+        "canonicalPath": "/data/shaders/primitives/line2D/shader.glsl",
+        "relativePath": "/data/shaders/primitives/line2D/shader.glsl"
       },
       "path": "/data/shaders/primitives/line2D/shader.glsl",
       "assetObjectClassName": "Core2D.DataClasses.ShaderData"
@@ -134,7 +135,8 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "absolutePath": "/data/shaders/primitives/line2D/instancing/shader.glsl"
+        "canonicalPath": "/data/shaders/primitives/line2D/instancing/shader.glsl",
+        "relativePath": "/data/shaders/primitives/line2D/instancing/shader.glsl"
       },
       "path": "/data/shaders/primitives/line2D/instancing/shader.glsl",
       "assetObjectClassName": "Core2D.DataClasses.ShaderData"
@@ -142,7 +144,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\kakish_city.jpg",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\kakish_city.jpg",
         "relativePath": "Resources\\kakish_city.jpg"
       },
       "path": "Resources\\kakish_city.jpg",
@@ -151,7 +153,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\vlad.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\vlad.png",
         "relativePath": "Resources\\vlad.png"
       },
       "path": "Resources\\vlad.png",
@@ -159,7 +161,7 @@
     },
     {
       "assetObject": {
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\kakish_audio\\norm_kakish.wav",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\kakish_audio\\norm_kakish.wav",
         "relativePath": "kakish_audio\\norm_kakish.wav"
       },
       "path": "kakish_audio\\norm_kakish.wav",
@@ -168,7 +170,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\facts_files.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\facts_files.png",
         "relativePath": "Resources\\facts_files.png"
       },
       "path": "Resources\\facts_files.png",
@@ -177,7 +179,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\ferapont.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\ferapont.png",
         "relativePath": "Resources\\ferapont.png"
       },
       "path": "Resources\\ferapont.png",
@@ -186,7 +188,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources/slay.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources/slay.png",
         "relativePath": "Resources\\slay.png"
       },
       "path": "Resources/slay.png",
@@ -194,7 +196,7 @@
     },
     {
       "assetObject": {
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\kakish_audio\\judgement-cut-sfx.wav",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\kakish_audio\\judgement-cut-sfx.wav",
         "relativePath": "kakish_audio\\judgement-cut-sfx.wav"
       },
       "path": "kakish_audio\\judgement-cut-sfx.wav",
@@ -203,7 +205,7 @@
     {
       "assetObject": {
         "lastModified": 1678727574938,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\shaders\\SlaysPPShader.glsl",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\shaders\\SlaysPPShader.glsl",
         "relativePath": "shaders\\SlaysPPShader.glsl"
       },
       "path": "shaders\\SlaysPPShader.glsl",
@@ -212,7 +214,7 @@
     {
       "assetObject": {
         "lastModified": 1678639308291,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\shaders\\Sample.glsl",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\shaders\\Sample.glsl",
         "relativePath": "shaders\\Sample.glsl"
       },
       "path": "shaders\\Sample.glsl",
@@ -221,7 +223,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\test.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\test.png",
         "relativePath": "Resources\\test.png"
       },
       "path": "Resources\\test.png",
@@ -230,7 +232,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\ss_stuka_12-30-22_11-16-50_(prostranstvenniy_puzir).jpg",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\ss_stuka_12-30-22_11-16-50_(prostranstvenniy_puzir).jpg",
         "relativePath": "Resources\\ss_stuka_12-30-22_11-16-50_(prostranstvenniy_puzir).jpg"
       },
       "path": "Resources\\ss_stuka_12-30-22_11-16-50_(prostranstvenniy_puzir).jpg",
@@ -239,7 +241,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\map.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\map.png",
         "relativePath": "Resources\\map.png"
       },
       "path": "Resources\\map.png",
@@ -248,7 +250,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\perlin_noise.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\perlin_noise.png",
         "relativePath": "Resources\\perlin_noise.png"
       },
       "path": "Resources\\perlin_noise.png",
@@ -257,7 +259,7 @@
     {
       "assetObject": {
         "lastModified": 1679510103768,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\test\\dfdf.java",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\test\\dfdf.java",
         "relativePath": "Scripts\\test\\dfdf.java"
       },
       "path": "Scripts\\test\\dfdf.java",
@@ -266,7 +268,7 @@
     {
       "assetObject": {
         "lastModified": 1680042202526,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\SpaceDeformationComponent.class",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\SpaceDeformationComponent.class",
         "relativePath": "Scripts\\SpaceDeformationComponent.class"
       },
       "path": "Scripts\\SpaceDeformationComponent.class",
@@ -275,7 +277,7 @@
     {
       "assetObject": {
         "lastModified": 1680042209540,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\SetActiveComponent.class",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\SetActiveComponent.class",
         "relativePath": "Scripts\\SetActiveComponent.class"
       },
       "path": "Scripts\\SetActiveComponent.class",
@@ -284,7 +286,7 @@
     {
       "assetObject": {
         "lastModified": 1680042220055,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\PickableComponent.class",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\PickableComponent.class",
         "relativePath": "Scripts\\PickableComponent.class"
       },
       "path": "Scripts\\PickableComponent.class",
@@ -293,7 +295,7 @@
     {
       "assetObject": {
         "lastModified": 1680042220042,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\HoholMegaSuperComponent.class",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Scripts\\HoholMegaSuperComponent.class",
         "relativePath": "Scripts\\HoholMegaSuperComponent.class"
       },
       "path": "Scripts\\HoholMegaSuperComponent.class",
@@ -302,7 +304,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\player.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\player.png",
         "relativePath": "Resources\\player.png"
       },
       "path": "Resources\\player.png",
@@ -311,7 +313,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\limon.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\limon.png",
         "relativePath": "Resources\\limon.png"
       },
       "path": "Resources\\limon.png",
@@ -319,17 +321,8 @@
     },
     {
       "assetObject": {
-        "lastModified": 1680397656653,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\",
-        "relativePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish"
-      },
-      "path": "",
-      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
-    },
-    {
-      "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\влад2.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\влад2.png",
         "relativePath": "Resources\\влад2.png"
       },
       "path": "Resources\\влад2.png",
@@ -338,7 +331,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\slay.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\slay.png",
         "relativePath": "Resources\\slay.png"
       },
       "path": "Resources\\slay.png",
@@ -347,7 +340,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\spike.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\spike.png",
         "relativePath": "Resources\\spike.png"
       },
       "path": "Resources\\spike.png",
@@ -356,7 +349,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\test2.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\test2.png",
         "relativePath": "Resources\\test2.png"
       },
       "path": "Resources\\test2.png",
@@ -365,7 +358,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\gui\\world\\crosshair.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\gui\\world\\crosshair.png",
         "relativePath": "Resources\\gui\\world\\crosshair.png"
       },
       "path": "Resources\\gui\\world\\crosshair.png",
@@ -374,7 +367,7 @@
     {
       "assetObject": {
         "textureBlock": 33984,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\white_texture.png",
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\Resources\\white_texture.png",
         "relativePath": "Resources\\white_texture.png"
       },
       "path": "Resources\\white_texture.png",
@@ -382,11 +375,29 @@
     },
     {
       "assetObject": {
-        "lastModified": 1680397656653,
-        "absolutePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish",
+        "lastModified": 1680480501313,
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish\\",
+        "relativePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish"
+      },
+      "path": "",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
+    },
+    {
+      "assetObject": {
+        "lastModified": 1680480501313,
+        "canonicalPath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish",
         "relativePath": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish"
       },
       "path": "D:\\Pixelfield\\SungearEngine2D\\Engine\\Projects\\new_kakish",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
+    },
+    {
+      "assetObject": {
+        "lastModified": -1,
+        "canonicalPath": "/data/shaders/postprocessing/postprocessing_default_shader.glsl",
+        "relativePath": "/data/shaders/postprocessing/postprocessing_default_shader.glsl"
+      },
+      "path": "/data/shaders/postprocessing/postprocessing_default_shader.glsl",
       "assetObjectClassName": "Core2D.DataClasses.ShaderData"
     }
   ]
